force-app/main/default/objects/ContentVersion/fields/Document_Classification__c.field-meta.xml
<CustomField>
    <fullName>Document_Classification__c</fullName>
    <description>Classify record type documents. The Record type with the classification uniquely identify external Entity_RecId field</description>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signed Disclosure</fullName>
            </value>
            <value>
                <fullName>Technical Description</fullName>
            </value>
            <value>
                <fullName>Publication/Manuscripts</fullName>
            </value>
            <value>
                <fullName>Software Code</fullName>
            </value>
            <value>
                <fullName>Third Party Agreements</fullName>
            </value>
            <value>
                <fullName>Third Party Code</fullName>
            </value>
            <value>
                <fullName>Finalised_CRDR</fullName>
                <label>Finalised CRDR</label>
            </value>
            <value>
                <fullName>Draft_CRDR</fullName>
                <label>Draft CRDR</label>
            </value>
            <value>
                <fullName>Original_Document</fullName>
                <label>Original Document</label>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Agreement_Amendment</fullName>
                <label>Agreement Amendment</label>
            </value>
            <value>
                <fullName>Worksheet</fullName>
            </value>
            <value>
                <fullName>Memo_of_Signatory</fullName>
                <label>Memo of Signatory</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>IPIA_Type_Template</fullName>
                <label>IPIA Type Template</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>