force-app/main/default/objects/ContentVersion/fields/Entity_Recid__c.field-meta.xml
<CustomField>
    <fullName>Entity_Recid__c</fullName>
    <description>External Reference to Forrester Oracle RecIds for multiple tables. eg: Case table PK case_recid. Agreement table PK agreement_recid. The Record type with the classification need to be considered</description>
    <label>Entity Recid</label>
    <length>80</length>
    <type>Text</type>
</CustomField>