force-app/main/default/objects/ContentVersion/fields/Entity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Sub_Type__c</fullName>
    <label>Data Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N_A</fullName>
                <label>N/A</label>
            </value>
            <value>
                <fullName>KUALI</fullName>
                <label>Kuali</label>
            </value>
            <value>
                <fullName>AGENCY</fullName>
                <label>Agency</label>
            </value>
            <value>
                <fullName>ASSIGN</fullName>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>BY-AGT</fullName>
                <label>License by Agent</label>
            </value>
            <value>
                <fullName>GOVUSE</fullName>
                <label>Government Use License</label>
            </value>
            <value>
                <fullName>INST</fullName>
                <label>Institution</label>
            </value>
            <value>
                <fullName>JOI NO</fullName>
                <label>Joint - No Purple File</label>
            </value>
            <value>
                <fullName>JOINT</fullName>
                <label>Joint Ownership</label>
            </value>
            <value>
                <fullName>LIC</fullName>
                <label>License</label>
            </value>
            <value>
                <fullName>LIC NO</fullName>
                <label>License - No Purple File</label>
            </value>
            <value>
                <fullName>MASTER</fullName>
                <label>Master Agreement</label>
            </value>
            <value>
                <fullName>MOU</fullName>
                <label>Memo of Understanding</label>
            </value>
            <value>
                <fullName>MTA</fullName>
                <label>Outgoing Material Transfer Agreement</label>
            </value>
            <value>
                <fullName>OBYAGN</fullName>
                <label>Option by Agent</label>
            </value>
            <value>
                <fullName>OPT</fullName>
                <label>Option</label>
            </value>
            <value>
                <fullName>PUBL</fullName>
                <label>Publishing</label>
            </value>
            <value>
                <fullName>SUBLIC</fullName>
                <label>Sublicense</label>
            </value>
            <value>
                <fullName>SW-EU</fullName>
                <label>Software End Use</label>
            </value>
            <value>
                <fullName>SW-LIC</fullName>
                <label>Software End Use Licenses &gt; 1K</label>
            </value>
            <value>
                <fullName>TECHTR</fullName>
                <label>Tech Transfer</label>
            </value>
            <value>
                <fullName>TM</fullName>
                <label>Trademark</label>
            </value>
            <value>
                <fullName>TRACKG</fullName>
                <label>Tracking</label>
            </value>
            <value>
                <fullName>SRA</fullName>
                <label>Sponsor Research Agreement</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Sponsor Agreement</label>
            </value>
            <value>
                <fullName>CONSORTIUM</fullName>
                <label>Consortium</label>
            </value>
            <value>
                <fullName>SUB_AWARD</fullName>
                <label>Subaward Document</label>
            </value>
            <value>
                <fullName>ASSIGNMENT</fullName>
                <label>Assignment</label>
            </value>
            <value>
                <fullName>AGREEMENT</fullName>
                <label>Agreement</label>
            </value>
            <value>
                <fullName>NDA</fullName>
                <label>Non-Disclosure Agreement (NDA)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>