force-app/main/default/objects/ContentVersion/fields/Note_level__c.field-meta.xml
<CustomField>
    <fullName>Note_level__c</fullName>
    <label>Note level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Level A</fullName>
            </value>
            <value>
                <fullName>Level B</fullName>
            </value>
            <value>
                <fullName>Level C</fullName>
            </value>
            <value>
                <fullName>Level D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>