force-app/main/default/objects/ContentVersion/recordTypes/Case.recordType-meta.xml
<RecordType>
    <fullName>Case</fullName>
    <active>true</active>
    <description>Shirley Document types</description>
    <label>Case</label>
</RecordType>