force-app/main/default/objects/ContentVersion/recordTypes/CRDR.recordType-meta.xml
<RecordType>
    <fullName>CRDR</fullName>
    <active>true</active>
    <description>CRDR Worksheets, Correspondence and CRDR Finacial Documents</description>
    <label>CRDR</label>
</RecordType>