force-app/main/default/objects/ContentVersion/recordTypes/Disclosure.recordType-meta.xml
<RecordType>
    <fullName>Disclosure</fullName>
    <active>true</active>
    <description>Disclosure Record Type</description>
    <label>Disclosure</label>
</RecordType>