force-app/main/default/objects/ContentVersion/recordTypes/DisclosureInventor.recordType-meta.xml
<RecordType>
    <fullName>DisclosureInventor</fullName>
    <active>true</active>
    <label>DisclosureInventor</label>
</RecordType>