force-app/main/default/objects/ContentVersion/recordTypes/IPIA.recordType-meta.xml
<RecordType>
    <fullName>IPIA</fullName>
    <active>true</active>
    <label>IPIA</label>
</RecordType>