force-app/main/default/objects/ContentVersion/recordTypes/IPIA_Type_Template.recordType-meta.xml
<RecordType>
    <fullName>IPIA_Type_Template</fullName>
    <active>true</active>
    <label>IPIA Type Template</label>
</RecordType>