force-app/main/default/objects/ContentVersion/recordTypes/Note.recordType-meta.xml
<RecordType>
    <fullName>Note</fullName>
    <active>true</active>
    <label>Note</label>
</RecordType>