force-app/main/default/objects/ContentVersion/recordTypes/Other_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Other_Agreement</fullName>
    <active>true</active>
    <description>Agreements ossociated with a Case</description>
    <label>Other Agreement</label>
</RecordType>