force-app/main/default/objects/ContentVersion/recordTypes/Sponsor_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Sponsor_Agreement</fullName>
    <active>true</active>
    <description>External Sponsor Agreements</description>
    <label>Sponsor Agreement</label>
</RecordType>