force-app/main/default/objects/ContentVersion/recordTypes/TLO_Agreement.recordType-meta.xml
<RecordType>
    <fullName>TLO_Agreement</fullName>
    <active>true</active>
    <description>TLO Agreement Document Type</description>
    <label>TLO Agreement</label>
</RecordType>