force-app/main/default/objects/ContentVersion/validationRules/IPIA_Doc_No_Versions.validationRule-meta.xml
<ValidationRule>
    <fullName>IPIA_Doc_No_Versions</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName  = &apos;IPIA&apos; &amp;&amp; VALUE(VersionNumber) &gt; 1</errorConditionFormula>
    <errorMessage>An IPIA Document may not have File Versions. Please delete the document and add a new one.</errorMessage>
</ValidationRule>