force-app/main/default/objects/ContentVersion/validationRules/IPIA_Type_Templates_No_Versions.validationRule-meta.xml
<ValidationRule>
    <fullName>IPIA_Type_Templates_No_Versions</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName  = &apos;IPIA_Type_Template&apos; &amp;&amp; VALUE(VersionNumber) &gt; 1</errorConditionFormula>
    <errorMessage>An IPIA Type Templates may not have File Versions. Please create a new IPIA Type.</errorMessage>
</ValidationRule>